--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,8 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.3",
     "@reduxjs/toolkit": "1.7.1",
+    "@storybook/router": "6.5.9",
+    "@types/storybook-react-router": "1.0.1",
     "axios": "0.26.1",
     "fontfaceobserver": "2.1.0",
     "i18next": "21.6.6",
@@ -144,6 +146,7 @@
     "serve": "13.0.2",
     "shelljs": "0.8.5",
     "standard-version": "9.3.2",
+    "storybook-addon-react-router-v6": "0.1.10",
     "stylelint": "14.2.0",
     "stylelint-config-recommended": "6.0.0",
     "stylelint-config-styled-components": "0.1.1",
