--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,6 @@
 DB_HOST=localhost
-DB_NAME=goexample
-DB_USER=exampleUser
+DB_NAME=myreview
+DB_USER=myreviewUser
 DB_PASSWORD=bigpassword
 DB_PORT=5432
-
 POSTGRES_PORT=5432
