--- a/api/package.json
+++ b/api/package.json
@@ -25,10 +25,8 @@
     "test:domain:cooperator": "cucumber-js -p cooperator",
     "test:e2e:cooperator": "cucumber-js -p cooperatorE2E",
     "test:domain": "cucumber-js -p mission -p cooperator",
-    "db:populate:missions": "./src/utils/scripts/missions.sh",
-    "db:clear:missions" : "./src/utils/scripts/clearMissionTable.sh",
-    "db:populate:cooperators": "./src/utils/scripts/cooperators.sh",
-    "db:clear:cooperators" : "./src/utils/scripts/clearCooperatorTable.sh"
+    "db:populate:reviews": "./src/utils/scripts/reviews.sh",
+    "db:clear:reviews" : "./src/utils/scripts/clearReviewTable.sh"
   },
   "dependencies": {
     "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
