--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "welab",
+  "name": "myreview",
   "version": "0.0.1",
   "description": "",
-  "author": "wemanity",
+  "author": "tonio",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
