--- a/client/package.json
+++ b/client/package.json
@@ -76,6 +76,7 @@
     "i18next-browser-languagedetector": "6.1.2",
     "react": "17.0.2",
     "react-app-polyfill": "3.0.0",
+    "react-burger-menu": "3.0.8",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.3.0",
     "react-hook-form": "7.30.0",
@@ -110,6 +111,7 @@
     "@types/jest": "27.4.0",
     "@types/node": "14.14.31",
     "@types/react": "18.0.2",
+    "@types/react-burger-menu": "2.8.3",
     "@types/react-dom": "18.0.0",
     "@types/react-redux": "7.1.22",
     "@types/react-router-dom": "5.3.2",
