--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,7 @@
     "test:e2e:cooperator": "cucumber-js -p cooperatorE2E",
     "test:domain": "cucumber-js -p mission -p cooperator",
     "db:populate:reviews": "./src/utils/scripts/reviews.sh",
-    "db:clear:reviews" : "./src/utils/scripts/clearReviewTable.sh"
+    "db:clear:reviews": "./src/utils/scripts/clearReviewTable.sh"
   },
   "dependencies": {
     "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
@@ -34,6 +34,7 @@
     "@nestjs/common": "^8.4.1",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.4.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
@@ -41,6 +42,8 @@
     "@types/react-dom": "^17.0.14",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -57,6 +60,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
