--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "passport": "^0.6.0",
@@ -56,6 +57,7 @@
     "@faker-js/faker": "^6.0.0-alpha.7",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
