--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "@nestjs/common": "^8.4.1",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.4.1",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
@@ -44,6 +45,7 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
@@ -62,6 +64,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
