feat: gestion des autorisations

--- a/api/.env.example
+++ b/api/.env.example
@@ -4,4 +4,5 @@ DB_USER=myreviewUser
 DB_PASSWORD=bigpassword
 DB_PORT=5432
 POSTGRES_PORT=5432
-JWT_SECRET=secret
+JWT_ACCESS_TOKEN_SECRET=secret
+JWT_REFRESH_TOKEN_SECRET=secret
