--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,7 @@
     "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
     "@nestjs/cli": "^8.2.4",
     "@nestjs/common": "^8.4.1",
-    "@nestjs/config": "^1.2.0",
+    "@nestjs/config": "^1.2.1",
     "@nestjs/core": "^8.4.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
@@ -44,7 +44,9 @@
     "@types/react-dom": "^17.0.14",
     "bcrypt": "^5.0.1",
     "chai": "^4.3.6",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -62,6 +64,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
