--- a/client/package.json
+++ b/client/package.json
@@ -90,6 +90,7 @@
     "sanitize.css": "13.0.0",
     "sass": "1.51.0",
     "styled-components": "5.3.3",
+    "universal-cookie": "4.0.4",
     "web-vitals": "2.1.2"
   },
   "devDependencies": {
@@ -109,6 +110,7 @@
     "@testing-library/react": "12.1.2",
     "@types/fontfaceobserver": "2.1.0",
     "@types/jest": "27.4.0",
+    "@types/js-cookie": "3.0.2",
     "@types/node": "14.14.31",
     "@types/react": "18.0.2",
     "@types/react-burger-menu": "2.8.3",
